# massa-rust-sc-examples

./: Cargo.toml  Makefile.toml  README.md  build.rs
deploy_sc/: Cargo.toml
deploy_sc/src/: lib.rs
echo/: Cargo.toml  Makefile.toml
generate_event/: Cargo.toml
generate_event/src/: lib.rs
src/: lib.rs  sdk.rs
src/sdk/: abi.rs  abis.rs  allocator.rs  mod.rs
src/sdk/abis/: abort.rs  echo.rs  log.rs  mod.rs
src/sdk/proto/: abi.proto
