[package]
name = "massa-rust-sc-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
prost = "0.11.8"        # specify the exact version to ensure determinism
cfg-if = "1.0.0"
lazy_static = "1.4.0"
# mockall = { version = "0.11.4", features = ["nightly"] }

[build-dependencies]
prost-build = "0.11.8" # specify exact version to ensure determinism
glob = "0.3.1"

[dev-dependencies]
log = "0.4.14"

[features]
prost-build = []

[profile.release]
debug = true
#strip = "debuginfo"
#strip = true