[package]
name = "massa-rust-sc-deploy_sc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
massa-rust-sc-sdk = { path = "../../massa-rust-sc-sdk" }
prost = { version = "0.11.9", default-features = false, features = [
    "prost-derive",
] } # specify the exact version to ensure determinism
prost-types = { version = "0.11.9", default-features = false }

[build-dependencies]
prost-build = "0.11.9" # specify exact version to ensure determinism
glob = "0.3.1"

[dev-dependencies]
massa-rust-sc-sdk = { path = "../../massa-rust-sc-sdk", features = ["testing"] }

[features]
prost-build = []

[profile.release]
debug = true
#strip = "debuginfo"
#strip = true
